# lwa_hacks

cob_robots-indigo_dev/cob_bringup/robots/: test_robot.launch
lwa_lab_robot/: CMakeLists.txt  notes.txt
lwa_lab_robot/cad/components/: link_1.igs  link_1.stl  link_1_s.stl  link_2.igs  link_2.stl  link_2_s.stl  link_3.igs  link_3.stl  link_3_s.stl  link_4.igs  link_4.stl  link_4_s.stl  link_5.igs  link_5.stl  link_5_s.stl  link_6.igs  link_6.stl  link_6_s.stl  table.igs  table.stl  table_s.stl
lwa_lab_robot/cad/mesh/: AutoSave_link4.skp  link4.blend  link4.blend1  link4.dae  link4.skp  link4.stl
lwa_lab_robot/cad/solid_parts/: joint_100_100.igs  joint_100_120.igs  joint_80_60.igs  joint_80_80.igs  pedestal.igs  tables.igs
lwa_lab_robot/calibration/: calibration.urdf.xacro
lwa_lab_robot/config/: can0_v2.yaml~  lwa_controller_prototype.yaml  lwa_lab_arm_controller.yaml  lwa_lab_arm_controller_single.yaml~  lwa_lab_powercube.yaml  lwa_lab_powercube_single.yaml~
lwa_lab_robot/launch/: lwa_hardware.launch  powercube.launch
lwa_lab_robot/urdf/: LWA_3_LAB.xacro
schunk_modular_robotics-indigo_CUSTOM/schunk_libm5api/: schunk_libm5api.kdev4
schunk_modular_robotics-indigo_CUSTOM/schunk_libm5api/src/: M5Test_v1.cpp
schunk_modular_robotics-indigo_CUSTOM/schunk_libm5api/src/Device/: PCanDevice.h
schunk_modular_robotics-indigo_CUSTOM/schunk_libm5api/src/M5apiw32/: m5apiw32.cpp
schunk_modular_robotics-indigo_CUSTOM/schunk_powercube_chain/: CMakeLists.txt  package.xml  schunk_powercube_chain.kdev4
schunk_modular_robotics-indigo_CUSTOM/schunk_powercube_chain/.kdev4/: schunk_powercube_chain.kdev4
schunk_modular_robotics-indigo_CUSTOM/schunk_powercube_chain/common/src/: M5Test_v1.cpp  PowerCubeCtrl.cpp
schunk_modular_robotics-indigo_CUSTOM/schunk_powercube_chain/ros/src/: powerTest.cpp  schunk_powercube_chain.cpp
schunk_modular_robotics-indigo_dev/schunk_libm5api/: CMakeLists.txt
schunk_modular_robotics-indigo_dev/schunk_libm5api/.kdev4/: schunk_libm5api.kdev4
schunk_modular_robotics-indigo_dev/schunk_libm5api/src/Device/: Device.cpp  PCanDevice.cpp  PCanDevice.h  ProtocolDevice.cpp
schunk_modular_robotics-indigo_dev/schunk_powercube_chain/ros/src/: schunk_powercube_chain.cpp
schunk_robots-groovy_dev/schunk_bringup/components/: lwa.launch  lwa4d.launch
schunk_robots-groovy_dev/schunk_bringup/tools/: teleop.launch
schunk_robots-groovy_dev/schunk_bringup_sim/launch/: lwa.launch  lwa4d.launch
schunk_robots-groovy_dev/schunk_hardware_config/lwa/config/: lwa.yaml
schunk_robots-groovy_dev/schunk_hardware_config/lwa4d/urdf/: lwa4d.urdf.xacro
